--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="last">Last Match</string>
     <string name="next">Next Match</string>
     <string name="favorites">Favorites</string>
+    <string name="team">Teams</string>
+
+    <array name="league_list">
+        <item>English Premier League</item>
+        <item>German Bundesliga</item>
+        <item>Italian Serie A</item>
+        <item>French Ligue 1</item>
+        <item>Spanish La Liga</item>
+        <item>Netherlands Eredivisie</item>
+    </array>
+
 </resources>
