--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Football Match Schedule</string>
     <string name="last">Last Match</string>
     <string name="next">Next Match</string>
+    <string name="match">Match</string>
     <string name="favorites">Favorites</string>
     <string name="team">Teams</string>
 
